# fastapi_poetry_sqlite

./: main.py  pyproject.toml  util.py
topics_practices/database_connection/: db_connect.py
topics_practices/database_connection/sqlite/: blog.db
topics_practices/database_connection/sqlite/models/: model.py
