[tool.poetry]
name = "fastapi-practices"
version = "0.1.0"
description = ""
authors = ["KSoft-Solution <kanhasahu955902@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_practices"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.45"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
